--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>AkeKy</title>
   </head>
   <body>
-
+    <p>
+      นายพิสิษฐ   ชนามุยา<br>
+      ชื่อเล่นชื่อ เอก อายุ 17 ปี น่ะครับ <br>
+      เรียนอยู่ชั้นมัธยมศึกษาปีที่ 6/1 <br>
+      โรงเรียนโคกสำโรงวิทยา <br>
+    </p>
   </body>
 </html>
