--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>AkeKy</title>
+    <style media="screen">
+      p{
+        color: blue;
+        background: pink;
+      }
+      h1{
+        color: red;
+      }
+    </style>
   </head>
   <body>
+    <h1>เกี่ยวกับเรา</h1>
     <p>
       นายพิสิษฐ   ชนามุยา<br>
       ชื่อเล่นชื่อ เอก อายุ 17 ปี น่ะครับ <br>
       เรียนอยู่ชั้นมัธยมศึกษาปีที่ 6/1 <br>
       โรงเรียนโคกสำโรงวิทยา <br>
     </p>
+    <hr>
   </body>
 </html>
