--- a/index.html
+++ b/index.html
@@ -3,18 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>AkeKy</title>
-    <style media="screen">
-      p{
-        color: blue;
-        background: pink;
-      }
-      h1{
-        color: red;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>เกี่ยวกับเรา</h1>
+    <h1>AkeKy</h1>
     <p>
       นายพิสิษฐ   ชนามุยา<br>
       ชื่อเล่นชื่อ เอก อายุ 17 ปี น่ะครับ <br>
