--- a/index.html
+++ b/index.html
@@ -3,16 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>AkeKy</title>
-    <link rel="stylesheet" href="style.css">
+    <style media="screen">
+      .one{
+        border-style: solid;
+        background: #3399ff;
+        padding: 30px;
+        border-width: 30px;
+        border-color: #0000ff;
+      }
+      body{
+        background: #0066ff;
+      }
+    </style>
   </head>
   <body>
-    <h1>AkeKy</h1>
-    <p>
-      นายพิสิษฐ   ชนามุยา<br>
-      ชื่อเล่นชื่อ เอก อายุ 17 ปี น่ะครับ <br>
-      เรียนอยู่ชั้นมัธยมศึกษาปีที่ 6/1 <br>
-      โรงเรียนโคกสำโรงวิทยา <br>
-    </p>
-    <hr>
+    <div class="one">
+      <h1>AkeKy</h1>
+      <p>
+      นายพิสิษฐ   ชนามุยา
+      ชื่อเล่นชื่อ เอก อายุ 17 ปี น่ะครับ
+      เรียนอยู่ชั้นมัธยมศึกษาปีที่ 6/1
+      โรงเรียนโคกสำโรงวิทยา
+      </p>
+    </div>
   </body>
 </html>
