--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AkeKy</title>
     <style media="screen">
       .one{
-        border-style: solid;
-        background: #3399ff;
-        padding: 30px;
-        border-width: 1px;
-        border-color: #0000ff;
+        border: solid 2px rgba(255, 93, 232, 1);
+        width: 80%;
+        margin: auto;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 10px 10px 10px rgba(219, 85, 200, 1);
       }
       body{
-        background: #0066ff;
+        background: rgba(255, 217, 217, 1)
       }
     </style>
   </head>
