--- a/index.html
+++ b/index.html
@@ -6,27 +6,60 @@
     <title>AkeKy</title>
     <style media="screen">
       .one{
-        border: solid 2px rgba(255, 93, 232, 1);
         width: 80%;
         margin: auto;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 10px 10px 10px rgba(219, 85, 200, 1);
+      }
+      .tad{
+        margin-top: 30px;
+        border-top: solid rgba(255, 87, 231, 1);
+        border-bottom: solid rgba(255, 87, 231, 1);
+      }
+      .menu{
+        background: rgba(255, 87, 231, 1);
+        overflow: auto;
       }
       body{
-        background: rgba(255, 217, 217, 1)
+        margin: 0;
+        background: rgba(255, 217, 217, 1);
+      }
+      .m-head{
+        float: right;
+        padding: 14px 16px;
+        font-size: 18px;
+      }
+      .m-list{
+        margin-top: 0;
+        padding-left: 0;
+        font-size: 18px;
+      }
+      .m-list li{
+        list-style-type: none;
+        float: left;
+        padding: 14px 16px;
       }
     </style>
   </head>
   <body>
-    <div class="one">
-      <h1>AkeKy</h1>
-      <p>
-      นายพิสิษฐ   ชนามุยา
-      ชื่อเล่นชื่อ เอก อายุ 17 ปี น่ะครับ
-      เรียนอยู่ชั้นมัธยมศึกษาปีที่ 6/1
-      โรงเรียนโคกสำโรงวิทยา
-      </p>
+    <div class="menu">
+      <div class="m-head">
+        เมนู
+      </div>
+        <ul class="m-list">
+          <li>รายการที่ 1</li>
+          <li>รายการที่ 2</li>
+          <li>รายการที่ 3</li>
+        </ul>
+    </div>
+    <div class="tad">
+      <div class="one">
+        <h1>AkeKy</h1>
+        <p>
+        นายพิสิษฐ   ชนามุยา
+        ชื่อเล่นชื่อ เอก อายุ 17 ปี นะครับ
+        เรียนอยู่ชั้นมัธยมศึกษาปีที่ 6/1
+        โรงเรียนโคกสำโรงวิทยา
+        </p>
+      </div>
     </div>
   </body>
 </html>
