--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
       .m-head{
         display: none;
       }
+      .m-list li a{
+        text-decoration: none;
+        color: inherit;
+      }
       @media (max-width:396px) {
         .m-head{
           display: block;
@@ -70,19 +74,20 @@
         เมนู
       </div>
         <ul class="m-list">
-          <li>รายการที่ 1</li>
-          <li>รายการที่ 2</li>
-          <li>รายการที่ 3</li>
+          <li><a href="#">หน้าแรก</a></li>
+          <li><a href="#">เกี่ยวกับเรา</a></li>
+          <li><a href="#">ติดต่อ</a></li>
         </ul>
     </div>
     <div class="tad">
       <div class="one">
         <h1>AkeKy</h1>
         <p>
-        นายพิสิษฐ   ชนามุยา
-        ชื่อเล่นชื่อ เอก อายุ 17 ปี นะครับ
-        เรียนอยู่ชั้นมัธยมศึกษาปีที่ 6/1
-        โรงเรียนโคกสำโรงวิทยา
+        ชื่อ นายพิสิษฐ   ชนามุยา <br>
+        ชื่อเล่นชื่อ เอก <br>
+        อายุ 17 ปี <br>
+        ชั้นมัธยมศึกษาปีที่ 6/1 <br>
+        โรงเรียนโคกสำโรงวิทยา <br>
         </p>
       </div>
     </div>
