--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
         width: 80%;
         margin: auto;
       }
-      .tad{
-        margin-top: 30px;
-        border-top: solid rgba(255, 87, 231, 1);
-        border-bottom: solid rgba(255, 87, 231, 1);
-      }
       .menu{
         background: rgba(255, 87, 231, 0.5);
         overflow: auto;
@@ -78,6 +73,9 @@
           <li><a href="#">เกี่ยวกับเรา</a></li>
           <li><a href="#">ติดต่อ</a></li>
         </ul>
+    </div>
+    <div class="image">
+      <img src="images/ake1.jpg" width=100%;>
     </div>
     <div class="tad">
       <div class="one">
