--- a/index.html
+++ b/index.html
@@ -7,20 +7,41 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <style media="screen">
+      .Head{
+        padding: 20px;
+        background: rgba(248, 249, 249, 1);
+      }
+      .Round{
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 80px;
+        padding-right: 80px;
+      }
+      body{
+        background: rgba(43, 229, 255, 0.8);
+      }
+      img{
+        width: 100%;
+      }
+    </style>
     <title>AkeKy</title>
   </head>
   <body>
+    <div class="Round">
+    <div class="Head">
+      <h1>AkeKy</h1>
+    </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">AkeKy</a>
+  <!-- <a class="navbar-brand" href="#"></a> -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">หน้าแรก<span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="#">หน้าแรก</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">เกี่ยวกับ</a>
@@ -37,7 +58,7 @@
         </div>
       </li> -->
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">ติดต่อ</a>
+        <a class="nav-link" href="#">ติดต่อ</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -46,6 +67,9 @@
     </form>
   </div>
 </nav>
+  <img src="images/ake1.jpg" class="img-responsive">
+
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
