--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <a class="nav-link" href="#">ติดต่อ</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+    <!-- <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    </form> -->
   </div>
 </nav>
   <img src="images/ake1.jpg" class="img-responsive">
