--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style media="screen">
-      .Head{
-        padding: 20px;
-        background: rgba(248, 249, 249, 1);
-      }
       img{
         width: 100%;
       }
@@ -19,11 +15,8 @@
     <title>AkeKy</title>
   </head>
   <body>
-    <div class="Head">
-      <h1>AkeKy</h1>
-    </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <!-- <a class="navbar-brand" href="#"></a> -->
+  <a class="navbar-brand" href="#">AkeKy</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
