--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="7"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="8"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="9"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="10"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="11"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="12"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="13"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="14"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="15"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="16"></li>
       </ol>
 
       <!-- Wrapper for slides -->
@@ -103,7 +117,91 @@
         <div class="item">
           <img src="images/ake3.jpg" alt="...">
           <div class="carousel-caption">
-            
+
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/20180126 #1_180316_0005.jpg" alt="...">
+          <div class="carousel-caption">
+
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/20180126_180316_0001.jpg" alt="...">
+          <div class="carousel-caption">
+
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/20180126_180316_0010.jpg" alt="...">
+          <div class="carousel-caption">
+
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/จิตอาสา 6-2-61_180316_0119.jpg" alt="...">
+          <div class="carousel-caption">
+
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/จิตอาสา 6-2-61_180316_0146.jpg" alt="...">
+          <div class="carousel-caption">
+
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/จิตอาสา 6-2-61_180316_0154.jpg" alt="...">
+          <div class="carousel-caption">
+
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/จิตอาสา 6-2-61_180316_0190.jpg" alt="...">
+          <div class="carousel-caption">
+
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/จิตอาสา 6-2-61_180316_0208.jpg" alt="...">
+          <div class="carousel-caption">
+
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/จิตอาสา 6-2-61_180316_0238.jpg" alt="...">
+          <div class="carousel-caption">
+
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/ปัจฉิมนิเทศ_180316_0008.jpg" alt="...">
+          <div class="carousel-caption">
+
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/วันวิทยาศาสตร์_180316_0286.jpg" alt="...">
+          <div class="carousel-caption">
+
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/วันวิทยาศาสตร์_180316_0298.jpg" alt="...">
+          <div class="carousel-caption">
+
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/สัปดาห์วิทยาศาสตร์60_180316_0011.jpg" alt="...">
+          <div class="carousel-caption">
+
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/อบรมการสร้างเว็บไซต์_180316_0100.jpg" alt="...">
+          <div class="carousel-caption">
+
           </div>
         </div>
       </div>
