--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="images/20180126 #1_180316_0005.jpg" alt="...">
+          <img src="images/201801261_180316_0005.jpg" alt="...">
           <div class="carousel-caption">
 
           </div>
