--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <style media="screen">
+      .carousel slide{
+        width: 100%;
+        height: 720;
+        margin: auto;
+      }
       img{
         width: 100%;
       }
