--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <style media="screen">
-      .carousel slide{
-        width: 100%;
-        height: 720;
+      #carousel-example-generic{
+        width: 1280px;
+        height: 720px;
         margin: auto;
       }
       img{
