--- a/index.html
+++ b/index.html
@@ -58,30 +58,66 @@
     <!-- Start Slide -->
 
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
+            <!-- <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
+            </ol> -->
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src=".../800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide">
+                <img class="d-block w-100" src="img/ake1.jpg" alt="...">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
+                <img class="d-block w-100" src="img/ake2.jpg" alt="...">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+                <img class="d-block w-100" src="img/ake3.jpg" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/ake4.jpg" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/ake5.jpg" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/ake6.jpg" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/ake7.jpg" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/ake8.jpg" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/ake9.jpg" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/ake10.jpg" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/ake11.jpg" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/ake12.jpg" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/ake13.jpg" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/ake14.jpg" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/ake15.jpeg" alt="...">
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
             <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
-            </a>
+            </a> -->
           </div>
 
     <!-- End Slide -->
