--- a/index.html
+++ b/index.html
@@ -123,9 +123,10 @@
           </div>
 
     <!-- End Slide -->
-    <div class="all">
-        <div class="row">
 
+    <div class="all">
+        <div class="head1">
+        	<h1>Phisit Chanamuya</h1>
         </div>
     </div>
 </body>
