--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <!-- End Slide -->
 
     <div class="all">
-        <div class="head1">
+        <div class="pic1">
         	<h1>Phisit Chanamuya</h1>
         </div>
     </div>
